Using square camera

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.desmond.squarecamera.CameraActivity" />
     </application>
 </manifest>
