--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
@@ -25,9 +28,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'io.reactivex:rxandroid:1.0.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.google.android.gms:play-services-location:7.8.0'
     compile 'io.realm:realm-android:0.82.2'
+    compile 'pl.charmas.android:android-reactive-location:0.7@aar'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
