--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.google.android.gms:play-services-location:7.8.0'
     compile 'io.realm:realm-android:0.82.2'
+    compile 'com.pnikosis:materialish-progress:1.5'
     compile 'pl.charmas.android:android-reactive-location:0.7@aar'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:percent:23.0.1'
 }
